--- a/package.json
+++ b/package.json
@@ -7,22 +7,40 @@
     "start": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "lint--fix": "eslint --fix . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "stylelint": "npx stylelint \"**/*.scss\"",
+    "stylelint--fix": "npx stylelint \"**/*.scss\" --fix",
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "lucide-react": "^0.364.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest": "^29.7.0",
     "sass": "^1.74.1",
+    "stylelint": "^16.3.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
