--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.364.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-loader-spinner": "^6.1.6",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3"
