--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
     },
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": ["src",  "./setupTests.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
