--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "stylelint": "npx stylelint \"**/*.scss\"",
     "stylelint--fix": "npx stylelint \"**/*.scss\" --fix",
     "preview": "vite preview",
-    "test": "jest"
+    "test:unit": "jest"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -26,6 +26,8 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.1",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -37,11 +39,16 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.74.1",
     "stylelint": "^16.3.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
