--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "stylelint": "npx stylelint \"**/*.scss\"",
     "stylelint--fix": "npx stylelint \"**/*.scss\" --fix",
     "preview": "vite preview",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -26,6 +28,15 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.2",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/addon-onboarding": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-vite": "^8.0.8",
+    "@storybook/test": "^8.0.8",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.1",
     "@types/jest": "^29.5.12",
@@ -39,11 +50,13 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-storybook": "^0.8.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.74.1",
+    "storybook": "^8.0.8",
     "stylelint": "^16.3.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
