--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,17 +3,8 @@
   "rules": {
     "scss/no-global-function-names": null,
     "selector-class-pattern": null,
-    "order/order": [
-      "custom-properties",
-      "declarations",
-      "rules", "at-rules"
-    ],
-    "order/properties-order": [
-      "width",
-      "height"
-    ]
+    "order/order": ["custom-properties", "declarations", "rules", "at-rules"],
+    "order/properties-order": ["width", "height"]
   },
-  "plugins": [
-    "stylelint-order"
-  ]
+  "plugins": ["stylelint-order"]
 }
