--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint--fix": "eslint --fix . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier . --check",
+    "format--fix": "prettier . --write",
     "stylelint": "npx stylelint \"**/*.scss\"",
     "stylelint--fix": "npx stylelint \"**/*.scss\" --fix",
     "preview": "vite preview",
@@ -46,8 +48,10 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
@@ -55,6 +59,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "3.2.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.74.1",
     "storybook": "^8.0.8",
@@ -63,6 +68,7 @@
     "stylelint-order": "^6.0.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
